[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Darwinia Client Node"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-cli"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "0.12.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# crates.io
log       = { version = "0.4" }
structopt = { version = "0.3", optional = true }
# darwinia-network service
darwinia-node-service = { path = "../node/service" }
darwinia-primitives   = { optional = true, path = "../primitives" }
darwinia-rpc          = { path = "../rpc" }
# paritytech client
sc-cli          = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sc-client-api   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sc-executor     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sc-service      = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
try-runtime-cli = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
# paritytech frame
frame-benchmarking-cli = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
# paritytech primitives
sp-core = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
try-runtime-cli              = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[features]
default = [
	"cli",
	"db",
	"full-node",
	"wasmtime",
]

cli = [
	# crates.io
	"structopt",
	# paritytech
	"sc-cli",
	"sc-service",
]

db = ["darwinia-node-service/db"]

full-node = ["darwinia-node-service/full-node"]

wasmtime = ["sc-cli/wasmtime"]

fast-runtime = ["darwinia-node-service/fast-runtime"]

evm-tracing = ["darwinia-node-service/evm-tracing"]

runtime-benchmarks = [
	# darwinia-network
	"darwinia-node-service/runtime-benchmarks",
	# paritytech
	"frame-benchmarking-cli",
]

try-runtime = [
	# darwinia-network
	"darwinia-primitives",
	"darwinia-node-service/try-runtime",
	# paritytech
	"try-runtime-cli",
]
