[package]
authors.workspace = true
description       = "Darwinia node."
edition.workspace = true
name              = "darwinia"
readme            = "README.md"
version.workspace = true

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# crates.io
array-bytes = { workspace = true }
async-trait = { version = "0.1" }
clap        = { version = "4.4", features = ["derive"] }
futures     = { version = "0.3" }
jsonrpsee   = { version = "0.16", features = ["server"] }
log         = { version = "0.4" }
serde       = { version = "1.0", features = ["derive"] }
tokio       = { version = "1.33" }
trauma      = { version = "2.2" }

# cumulus
cumulus-client-cli                    = { workspace = true }
cumulus-client-collator               = { workspace = true }
cumulus-client-consensus-aura         = { workspace = true }
cumulus-client-consensus-common       = { workspace = true }
cumulus-client-consensus-proposer     = { workspace = true }
cumulus-client-service                = { workspace = true }
cumulus-primitives-core               = { workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
cumulus-relay-chain-interface         = { workspace = true }

# darwinia
crab-runtime     = { workspace = true, optional = true }
darwinia-runtime = { workspace = true, optional = true }
dc-primitives    = { workspace = true, features = ["std"] }
koi-runtime      = { workspace = true, optional = true }

# frontier
fc-api          = { workspace = true }
fc-db           = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc          = { workspace = true }
fc-rpc-core     = { workspace = true }
fc-storage      = { workspace = true }
fp-evm          = { workspace = true, features = ["std"] }
fp-rpc          = { workspace = true, features = ["std"] }

# moonbeam
moonbeam-primitives-ext       = { workspace = true, optional = true, features = ["std"] }
moonbeam-rpc-debug            = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true, features = ["std"] }
moonbeam-rpc-trace            = { workspace = true }

# polkadot
polkadot-cli        = { workspace = true }
polkadot-primitives = { workspace = true, features = ["std"] }
xcm                 = { workspace = true, features = ["std"] }

# substrate
frame-benchmarking             = { workspace = true, optional = true, features = ["std"] }
frame-benchmarking-cli         = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship            = { workspace = true }
sc-chain-spec                  = { workspace = true }
sc-cli                         = { workspace = true }
sc-client-api                  = { workspace = true }
sc-consensus                   = { workspace = true }
sc-consensus-aura              = { workspace = true }
sc-executor                    = { workspace = true }
sc-network                     = { workspace = true }
sc-network-sync                = { workspace = true }
sc-offchain                    = { workspace = true }
sc-rpc                         = { workspace = true }
sc-service                     = { workspace = true }
sc-sysinfo                     = { workspace = true }
sc-telemetry                   = { workspace = true }
sc-tracing                     = { workspace = true }
sc-transaction-pool            = { workspace = true }
sc-transaction-pool-api        = { workspace = true }
sp-api                         = { workspace = true, features = ["std"] }
sp-block-builder               = { workspace = true, features = ["std"] }
sp-blockchain                  = { workspace = true }
sp-consensus-aura              = { workspace = true, features = ["std"] }
sp-core                        = { workspace = true, features = ["std"] }
sp-inherents                   = { workspace = true, features = ["std"] }
sp-keystore                    = { workspace = true }
sp-offchain                    = { workspace = true, features = ["std"] }
sp-runtime                     = { workspace = true, features = ["std"] }
sp-session                     = { workspace = true, features = ["std"] }
sp-timestamp                   = { workspace = true, features = ["std"] }
sp-transaction-pool            = { workspace = true, features = ["std"] }
substrate-frame-rpc-system     = { workspace = true }
substrate-prometheus-endpoint  = { workspace = true }

[features]
default = [
	"crab-native",
	"darwinia-native",
]

fast-runtime = [
	# darwinia
	"crab-runtime?/fast-runtime",
	"darwinia-runtime?/fast-runtime",
	"koi-runtime?/fast-runtime",
]

evm-tracing = [
	# darwinia
	"crab-runtime?/evm-tracing",
	"darwinia-runtime?/evm-tracing",
	"koi-runtime?/evm-tracing",

	# moonbeam
	"moonbeam-primitives-ext",
]

runtime-benchmarks = [
	# darwinia
	"crab-runtime?/runtime-benchmarks",
	"darwinia-runtime?/runtime-benchmarks",
	"koi-runtime?/runtime-benchmarks",

	# polkadot
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",

	# substrate
	"frame-benchmarking",
	"frame-benchmarking-cli/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	# darwinia
	"crab-runtime?/try-runtime",
	"darwinia-runtime?/try-runtime",
	"koi-runtime?/try-runtime",

	# polkadot
	"polkadot-cli/try-runtime",

	# substrate
	"sp-runtime/try-runtime",
]

all-natives = [
	# darwinia
	"crab-native",
	"darwinia-native",
	"koi-native",
]
crab-native = [
	# darwinia
	"crab-runtime",

	# polkadot
	"polkadot-cli/kusama-native",
]
darwinia-native = [
	# darwinia
	"darwinia-runtime",

	# polkadot
	"polkadot-cli/polkadot-native",
]
koi-native = [
	# darwinia
	"koi-runtime",

	# polkadot
	"polkadot-cli/rococo-native",
]
